--- a/src/Components/index.css
+++ b/src/Components/index.css
@@ -2,8 +2,9 @@ body {
 
     padding: 0;
     margin: 0;
-    background-color: white;
+    background-color: aliceblue;
     height: auto;
+    font-family: Sans-serif, Montserrat;
 
 }
 
@@ -44,15 +45,22 @@ margin-left: -80px;
 
 .RightMain{
     width: 50%;
+    
+    
+
+    
 }
 
 
 .RightMain h1{
     margin-left: 80px;
-    margin-top: 220px;
+    margin-top: 235px;
 }
 .RightMain p{
     margin-left: 80px;
+    font-weight: 900;
+   padding-top: -10px;
+   
 }
 
 
@@ -71,3 +79,267 @@ margin-left: -80px;
 .logos h1 {
     size: 50px;
 }
+
+.form{
+    margin-left: 80px   ;
+    width: 460px;
+    padding-top: 30px;
+    height: 400px;
+    
+}
+
+.form input {
+    width: 356.77px;
+    border-radius: 20px;
+    
+}
+
+
+.form h5{
+    margin-top: 50px;
+    margin-left: 10px;
+}
+
+.form button {
+    width: 356.77px;
+   
+
+}
+
+.icon {
+    vertical-align: middle;
+    line-height: 1px;
+    font-size: 20px;
+  }
+  .icon_header {
+    vertical-align: middle;
+    line-height: 1px;
+    font-size: 26px;
+  }
+  .icon, .icon_header {
+    margin-right: 5px;
+  }
+  
+  .close_icon {
+    color: red;
+    margin-left: 30px;
+    margin-top: 10px;
+    cursor: pointer;
+  }
+  
+  .grid-container {
+    display: grid;
+    grid-template-columns: 260px 1fr 1fr 1fr;
+    grid-template-rows: 0.2fr 3fr;
+    grid-template-areas:
+      'sidebar header header header'
+      'sidebar main main main';
+    height: 100vh;
+  }
+  
+  /* Header  */
+  .header {
+    grid-area: header;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 30px 0 30px;
+    box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
+  }
+  
+  .menu-icon {
+    display: none;
+  }
+  /* End Header  */
+  
+  /* Sidebar  */
+  #sidebar {
+    grid-area: sidebar;
+    height: 100%;
+    background-color: #4285F4;
+    overflow-y: auto;
+    border-radius: 10px;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+  }
+  
+  .sidebar-title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 30px 0px 30px;
+    margin-bottom: 30px;
+  }
+  
+  .sidebar-title > span {
+    display: none;
+  }
+  
+  .sidebar-brand {
+    margin-top: 15px;
+    font-size: 20px;
+    font-weight: 700;
+    color: white;
+  }
+  
+  .sidebar-list {
+    padding: 0;
+    list-style-type: none;
+  }
+  
+  .sidebar-list-item {
+    padding: 20px 20px 20px 20px;
+    font-size: 18px;
+  }
+  
+  .sidebar-list-item:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+  }
+  
+  .sidebar-list-item > a {
+    text-decoration: none;
+    color: #fdfdff;
+  }
+  
+  .sidebar-responsive {
+    display: inline !important;
+    position: absolute;
+    /*
+      we want the z-index of the sidebar higher so that
+      the charts are not showing over the sidebar 
+      on small screens
+    */
+    z-index: 12 !important;
+  }
+  
+  /* End Sidebar  */
+  
+  
+  /* Main  */  
+  .main-container {
+    grid-area: main;
+    overflow-y: auto;
+    padding: 20px 20px;
+    color: rgba(255, 255, 255, 0.95);
+  }
+  
+  .main-title {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .main-cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 20px;
+  }
+
+
+  .main-cardsbottom {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 40px;
+    margin-top: 40px;
+  }
+  
+  .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 8px 15px;
+    background-color: white;
+    box-shadow: 10px;
+  }
+
+  .cardbottom{
+    width: 500px;
+  }
+  
+  .cardbottom h1{
+    color:black;
+    font-size: 25px;
+    margin:10px;
+  }
+  
+  
+  .card-inner > .card_icon {
+    font-size: 30px;
+    color:green
+
+  }
+
+
+
+  
+  
+  .card-innerbottom > .card_icon {
+    font-size: 30px;
+    color:green
+
+  }
+
+  
+  
+  .charts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 5px;
+    margin-right: 170px;
+    border: 1px solid grey;
+    border-radius: 10px;
+    background-color: #E0E0E0;
+justify-content: center;
+align-items: center;
+  }
+  
+  /* End Main  */
+  
+  
+  /* Medium <= 992px */
+    
+  @media screen and (max-width: 100%) {
+    .grid-container {
+      grid-template-columns: 1fr;
+      grid-template-rows: 0.2fr 3fr;
+      grid-template-areas:
+        'header'
+        'main';
+    }
+  
+    #sidebar {
+      display: none;
+    }
+  
+    .menu-icon {
+      display: inline;
+    }
+  
+    .sidebar-title > span {
+      display: inline;
+    }
+  }
+  /* Small <= 768px */
+    
+  @media screen and (max-width: 768px) {
+    .main-cards {
+      grid-template-columns: 1fr;
+      gap: 10px;
+      margin-bottom: 0;
+    }
+  
+    .charts {
+      grid-template-columns: 1fr;
+      margin-top: 30px;
+    }
+  }
+  
+  /* Extra Small <= 576px */
+  
+  @media screen and (max-width: 576px) {
+    .hedaer-left {
+      display: none;
+    }
+  }
+  
